# world_cup_probability

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.streamlit/: config.toml
config/: fbref_sources.json  transfermarkt_teams.json
docs/: 01_modelo_elo.md  02_schema_duckdb.md  03_poisson_dist.md  como_rodar.md
src/: __init__.py  analytics.py  app.py  competition_filters.py  data_collection.py  db_init.py  elo_engine.py  feature_pipeline.py  fifa_world_ranking.py  ingestion.py  live_results.py  model.py  orchestrator.py  outcome_model.py  outcome_predictions.py  settings.py  simulator.py  sql_loader.py  world_cup_2026_schedule.py  world_football_elo_ratings.py
src/dashboard/: __init__.py  analysis.py  components.py  constants.py  data.py  formatting.py  styles.py  views.py
src/sql/analytics/: most_probable_final_matchup.sql  semifinal_reach.sql  title_probability.sql
src/sql/feature_pipeline/: consolidated_matches.sql.j2
src/sql/orchestrator/: team_lambdas.sql.j2
tests/: test_app.py  test_competition_filters.py  test_data_collection.py  test_db_init.py  test_elo_engine.py  test_feature_pipeline.py  test_fifa_world_ranking.py  test_live_results.py  test_model.py  test_orchestrator.py  test_outcome_model.py  test_outcome_predictions.py  test_simulator_2026.py  test_smoke.py  test_sql_loader.py  test_world_football_elo_ratings.py
