[project]
name = "world-cup-probability"
version = "0.1.0"
description = "Pipeline de probabilidade para a Copa do Mundo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "duckdb>=1.5.4",
    "httpx>=0.28.1",
    "kaggle>=2.2.2",
    "lxml>=4.9.4",
    "matplotlib>=3.11.0",
    "numba>=0.65.1",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "setuptools>=82.0.1",
    "shap>=0.49.1",
    "soccerdata>=1.8.7",
    "xgboost>=3.3.0",
]

[project.scripts]
collection = "src.data_collection:main"
download-data = "src.data_collection:download_main"
load-data = "src.data_collection:load_main"
db-init = "src.db_init:main"
world-cup-probability-elo = "src.elo_engine:main"
world-football-elo-ratings = "src.world_football_elo_ratings:main"
features = "src.feature_pipeline:main"
train-model = "src.model:main"
simulate = "src.simulator:main"
analytics = "src.analytics:main"
pipeline = "src.orchestrator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "data",
    "docs",
    "models",
    "reports",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
]



