[project]
name = "world-cup-probability"
version = "0.1.0"
description = "Pipeline de probabilidade para a Copa do Mundo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "duckdb>=1.5.4",
    "httpx>=0.28.1",
    "kaggle>=2.2.2",
    "lxml>=4.9.4",
    "matplotlib>=3.11.0",
    "numba>=0.65.1",
    "optuna>=4.0.0",
    "polars>=1.41.2",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "setuptools>=82.0.1",
    "shap>=0.49.1",
    "soccerdata>=1.8.7",
    "streamlit>=1.51.0",
    "xgboost>=3.3.0",
]

[project.scripts]
collection = "src.data_collection:main"
download-data = "src.data_collection:download_main"
load-data = "src.data_collection:load_main"
db-init = "src.db_init:main"
world-cup-probability-elo = "src.elo_engine:main"
world-football-elo-ratings = "src.world_football_elo_ratings:main"
fifa-world-ranking = "src.fifa_world_ranking:main"
features = "src.feature_pipeline:main"
train-model = "src.model:main"
train-outcome-model = "src.outcome_model:main"
predict-outcomes = "src.outcome_predictions:main"
calibrate-dixon-coles = "src.simulator:calibrate_dixon_coles_main"
simulate = "src.simulator:main"
analytics = "src.analytics:main"
update-world-cup-results = "src.live_results:main"
pipeline = "src.orchestrator:main"
dashboard = "src.app:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100
extend-exclude = [
    "data",
    "docs",
    "models",
    "reports",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
]
fixable = ["ALL"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.sqlfluff.core]
dialect = "duckdb"
templater = "jinja"
sql_file_exts = ".sql,.sql.j2"
max_line_length = 100
exclude_rules = "ST06"

[tool.sqlfluff.templater.jinja.context]
squad_attributes_ctes = ""
world_football_elo_ratings_cte = ""
fifa_world_ranking_cte = ""
home_world_football_elo_ratings_expr = "e.home_rating_before"
away_world_football_elo_ratings_expr = "e.away_rating_before"
home_fifa_points_expr = "e.home_rating_before"
away_fifa_points_expr = "e.away_rating_before"
home_fifa_rank_expr = "0.0"
away_fifa_rank_expr = "0.0"
home_prior_world_cup_appearances_expr = "0.0"
away_prior_world_cup_appearances_expr = "0.0"
home_prior_world_cup_points_per_match_expr = "0.0"
away_prior_world_cup_points_per_match_expr = "0.0"
home_prior_world_cup_goal_diff_per_match_expr = "0.0"
away_prior_world_cup_goal_diff_per_match_expr = "0.0"
home_prior_world_cup_yellow_cards_per_match_expr = "0.0"
away_prior_world_cup_yellow_cards_per_match_expr = "0.0"
home_prior_world_cup_sending_offs_per_match_expr = "0.0"
away_prior_world_cup_sending_offs_per_match_expr = "0.0"
home_prior_world_cup_fair_play_penalty_per_match_expr = "0.0"
away_prior_world_cup_fair_play_penalty_per_match_expr = "0.0"
home_squad_attribute_selects = "0.0 AS home_avg_overall,"
away_squad_attribute_selects = "0.0 AS away_avg_overall,"
world_football_elo_ratings_joins = ""
fifa_world_ranking_joins = ""
world_cup_prior_history_joins = ""
world_cup_prior_discipline_joins = ""
squad_attribute_joins = ""
current_world_cup_flag = "FALSE"
current_world_cup_exclusion = "TRUE"
match_history_exclusion = "TRUE"
elo_history_exclusion = "TRUE"
world_cup_prior_history_cte = ""
world_cup_prior_discipline_cte = ""
world_football_elo_ratings_select = "COALESCE(le.world_cup_probability_elo_now, 1500.0) AS world_football_elo_ratings_now"
fifa_world_ranking_points_select = "COALESCE(le.world_cup_probability_elo_now, 1500.0) AS fifa_world_ranking_points"
fifa_world_ranking_rank_select = "0.0 AS fifa_world_ranking_rank"
world_cup_prior_history_selects = "0.0 AS prior_world_cup_appearances, 0.0 AS prior_world_cup_points_per_match, 0.0 AS prior_world_cup_goal_diff_per_match,"
world_cup_prior_discipline_selects = "0.0 AS prior_world_cup_yellow_cards_per_match, 0.0 AS prior_world_cup_sending_offs_per_match, 0.0 AS prior_world_cup_fair_play_penalty_per_match,"
squad_attributes_select = "0.0 AS avg_overall,"
world_football_elo_ratings_join = ""
fifa_world_ranking_join = ""
world_cup_prior_history_join = ""
world_cup_prior_discipline_join = ""
squad_attributes_join = ""

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "sqlfluff>=3.3.1",
]
